<resources>
    <string name="app_name">TFG_LidiaMartinAyuso</string>

    <!-->Login<-->
    <string name="nomApp">ZooPervision</string>
    <string name="usu">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar sesión</string>

    <!-->Main<-->
    <string name="tituloMain">Panel de control</string>
    <string name="btnAnimales">Animales</string>
    <string name="btnRecintos">Recintos</string>
    <string name="btnInventario">Inventario</string>
    <string name="btnStockBajo">Stock bajo</string>
    <string name="btnProductos">Productos</string>
    <string name="btnVentas">Ventas</string>
    <string name="btnProveedores">Proveedores</string>
    <string name="btnPedidos">Pedidos</string>
    <string name="btnEmpleados">Empleados</string>
    <string name="btnDashboard">Dashboard</string>

    <!-->Animales<-->
    <string name="nombre">Nombre</string>
    <string name="tipo">Tipo</string>
    <string name="edad">Edad</string>
    <string name="btnGuardar">Guardar</string>

    <string name="animalesRecinto">Animales del recinto</string>
    <string name="btnAñadirAnimal">Añadir animal</string>

    <!-->Detalles<-->
    <string name="marcarRecibido">Marcar como recibido</string>
    <string name="btnExportar">Exportar a PDF</string>

    <!-->Ventas y Pedidos<-->
    <string name="btnAgregarVenta">Añadir venta</string>
    <string name="registrarPedido">Registrar pedido</string>
    <string name="registrarVenta">Registrar venta</string>
    <string name="producto">Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="precioUnitario">Precio unitario</string>
    <string name="guardarPedido">Guardar pedido</string>
    <string name="crearPedido">Crear pedido</string>

    <!-->Dashboard<-->
    <string name="dashboard">Dashboard</string>
    <string name="txtAnimales">Animales: 0</string>
    <string name="txtRecintos">Recintos: 0</string>
    <string name="txtProductosAnimales">Productos animales: 0</string>
    <string name="txtProductosTienda">Productos tienda: 0</string>
    <string name="txtStock">Stock bajo: 0</string>
    <string name="txtPedidosPendientes">Pedidos pendientes</string>
    <string name="txtventas">Ventas hoy: 0€</string>

    <!-->Inventario<-->
    <string name="nombreItem">Nombre item</string>
    <string name="stock">Stock</string>
    <string name="stockMínimo">Stock mínimo</string>
    <string name="proveedor">Proveedor</string>
    <string name="guardar">Guardar</string>
    <string name="stockBajo">⚠ Items con stock bajo ⚠</string>

    <!-->Productos<-->
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="tipoProducto">Tipo (entrada / souvenir)</string>
    <string name="anadirItem">Añadir item</string>
    <string name="anadirproducto">Añadir producto</string>

    <!-->Proveedores<-->
    <string name="empresa">Empresa</string>
    <string name="contacto">Persona de contacto</string>
    <string name="tlf">Teléfono</string>
    <string name="email">Email</string>
    <string name="dir">Dirección</string>
    <string name="obser">Observaciones</string>
    <string name="guardarProveedor">Guardar proveedor</string>
    <string name="anadirProveedor">Añadir proveedor</string>

    <!-->Recintos<-->
    <string name="nombreRecinto">Nombre del recinto</string>
    <string name="tipoRecinto">Tipo de recinto</string>
    <string name="capacidad">Capacidad</string>
    <string name="guardarRecinto">Guardar recinto</string>
    <string name="anadirRecinto">Añadir recinto</string>

    <!-->Busquedas<-->
    <string name="buscarAnimal">Buscar animal</string>
    <string name="buscarProducto">Buscar producto</string>
    <string name="buscarPedido">Buscar pedido</string>
    <string name="buscarProveedor">Buscar proveedor</string>
    <string name="buscarVenta">Buscar venta</string>

</resources>