<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNombreRecinto"
        android:hint="@string/nombreRecinto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etTipoRecinto"
        android:hint="@string/tipoRecinto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etCapacidad"
        android:hint="@string/capacidad"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnGuardarRecinto"
        android:text="@string/guardarRecinto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>