<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/nomApp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--FILA 1-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAnimales"
                android:text="@string/btnAnimales"
                android:drawableTop="@android:drawable/ic_menu_compass"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:layout_width="0dp"
                android:layout_height="80dp"/>

            <Button
                android:id="@+id/btnRecintos"
                android:text="@string/btnRecintos"
                android:drawableTop="@android:drawable/ic_menu_mapmode"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:layout_width="0dp"
                android:layout_height="80dp"/>

        </LinearLayout>

        <!--FILA 2-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnInventario"
                android:text="@string/btnInventario"
                android:drawableTop="@android:drawable/ic_menu_agenda"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:layout_width="0dp"
                android:layout_height="80dp"/>

            <Button
                android:id="@+id/btnStockBajo"
                android:text="@string/btnStockBajo"
                android:drawableTop="@android:drawable/ic_dialog_alert"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:layout_width="0dp"
                android:layout_height="80dp"/>

        </LinearLayout>

        <!--FILA 3-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnProductos"
                android:text="@string/btnProductos"
                android:drawableTop="@android:drawable/ic_menu_gallery"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:layout_width="0dp"
                android:layout_height="80dp"/>

            <Button
                android:id="@+id/btnVentas"
                android:text="@string/btnVentas"
                android:drawableTop="@android:drawable/ic_menu_send"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:layout_width="0dp"
                android:layout_height="80dp"/>

        </LinearLayout>

        <!--FILA 4-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnProveedores"
                android:text="@string/btnProveedores"
                android:drawableTop="@android:drawable/ic_menu_myplaces"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:layout_width="0dp"
                android:layout_height="80dp"/>

            <Button
                android:id="@+id/btnPedidos"
                android:text="@string/btnPedidos"
                android:drawableTop="@android:drawable/ic_menu_add"
                android:layout_weight="1"
                android:layout_margin="6dp"
                android:layout_width="0dp"
                android:layout_height="80dp"/>

        </LinearLayout>

        <!--FILA 5-->
        <Button
            android:id="@+id/btnEmpleados"
            android:text="@string/btnEmpleados"
            android:drawableTop="@android:drawable/ic_menu_manage"
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>



    </LinearLayout>

</ScrollView>